fix template quiz

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,6 +63,8 @@
         <link href="{{ asset("assets2/css/style.css") }}" rel="stylesheet">
         <script src="https://kit.fontawesome.com/cc2c1873c0.js" crossorigin="anonymous"></script>
 
+		<link href="{{asset("assets/css/passerQuiz.css") }}" rel="stylesheet"> 
+
 
 
 
