fix integration oussama

--- a/templates/rate/livre.html.twig
+++ b/templates/rate/livre.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseTest.html.twig' %}
 
 {% block body %}
     <style>
@@ -7,7 +7,7 @@
         }
     </style>
 
-    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><
 
     <center>
 <img src="{{ asset('uploads/' ~ infoL.image) }}" alt="Profile" class="rounded-circle" width=250px height=250px><br>{{infoL.titrel}}</h4> <br>
