--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!{% endblock %}
 {% block stylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ asset('assets3/css/bootstrap.min.css?ver=1.1.0') }}" rel="stylesheet">
     <link href="{{ asset('assets3/css/main.css?ver=1.1.0') }}" rel="stylesheet">
+
+
     <noscript>
         <style type="text/css">
             [data-aos] {
@@ -14,8 +15,10 @@
             }
         </style>
     </noscript>
+    {{  parent() }}
 {% endblock %}
 {% block body %}
+
         <div class="profile-page">
             <div class="wrapper">
                 <div class="page-header page-header-small" filter-color="green">
