--- a/templates/bibliotheque/biblioClient.html.twig
+++ b/templates/bibliotheque/biblioClient.html.twig
@@ -1,34 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+
     <style>
         img {
             border-radius: 50%;
         }
     </style>
-    <div class="jumbotron top-space">
-        <div class="container">
+<div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3 mt-3" >
+    {% for b in bibC %}
 
-            <h3 class="text-center thin">Les bibliotheques </h3>
-
-            <div class="row">
-                {% for b in bibC %}
-                <div class="col-md-3 col-sm-6 highlight">
-                    <div class="h-caption"><h4><img src="uploads/bib.png" alt="Profile" class="rounded-circle" width="50" height="50"> <br><br> <a href ="{{ path ('app_livreC',{'id':b.intc })}}">
-                             Nom : {{ b.nomc }} </a></h4></div>
-                    <div class="h-caption"><h4> Domaine :{{b.domainec}}</h4></div>
-                    <div class="h-body text-center">
-                        <p> <h8> Description : {{ b.descriptionc }} </h8></p>
-                    </div>
-
-                </div>
-                {% endfor %}
-
-
-            </div> <!-- /row  -->
-
-        </div>
-    </div>
-
-
+    <div class="col"> <div class="card h-100 shadow-sm"> <img src="uploads/bib.png" alt="Profile" class="card-img-top" alt="..."> <div class="card-body"> <div class="clearfix mb-3"> <span class="float-start badge rounded-pill bg-primary">Nom : {{ b.nomc }}</span> <span class="float-end price-hp">Domaine :{{b.domainec}}</span> </div> <h5 class="card-title">Description : {{ b.descriptionc }}</h5> <div class="text-center my-4"> <a href ="{{ path ('app_livreC',{'id':b.intc })}}"class="btn btn-warning"> Check offer</a> </div> </div> </div> </div>
+    {% endfor %}
+</div>
 {% endblock %}
 
