--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -26,15 +26,11 @@
                     <div class="container">
                         <div class="content-center">
                             <div class="cc-profile-image"><a href="#"><img src="{{ asset('assets3/images/anthony.jpg') }}" alt="Image"/></a></div>
-                            <div class="h2 title">Anthony Barnett</div>
-                            <p class="category text-white">Web Developer, Graphic Designer,  Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                            <div class=" ">{{ app.user.nom }}{{ app.user.prenom }}</div>
+                            <p class="category text-white">{{ app.user.profil }}</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                         </div>
                     </div>
-                    <div class="section">
-                        <div class="container">
-                            <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -45,28 +41,24 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="card-body">
                                 <div class="h4 mt-0 title">About</div>
-                                <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
-                                <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+                                <p>{{ app.user.infos }}</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="card-body">
                                 <div class="h4 mt-0 title">Basic Information</div>
-                                <div class="row">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                    <div class="col-sm-8">24</div>
-                                </div>
+
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                                    <div class="col-sm-8">anthony@company.com</div>
+                                    <div class="col-sm-8">{{app.user.email}}</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                    <div class="col-sm-8">+1718-111-0011</div>
+                                    <div class="col-sm-8">{{ app.user.tel }}</div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                    <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+                                    <div class="col-sm-4"><strong class="text-uppercase">CIN:</strong></div>
+                                    <div class="col-sm-8">{{ app.user.cin }}</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -84,52 +76,35 @@
             <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                        {%  for c in competenes %}
+                            <div class="col-md-6">
+                                <div class="progress-container progress-primary"><span class="progress-badge">{{ c.nomcompetance }}</span>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                                             style="width:
+                                             {%  if c.niveau == "Expert" %}
+                                                     95%
+                                             {% elseif c.niveau == "Intermediare" %}
+                                                     55%
+                                                 {% else %}
+                                                     20%
+                                                     {% endif %}
+                                                     ;
+                                                     ">
+
+                                        </div><span class="progress-value">{%  if c.niveau == "Expert" %}
+                                                Expert
+                                            {% elseif c.niveau == "Intermediare" %}
+                                                Intermediare
+                                            {% else %}
+                                                Debutant
+                                            {% endif %}
+                                                     </span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
+
                     </div>
                 </div>
             </div>
