integrate template formation

--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseAdmin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Hello FormationController!{% endblock %}
 
@@ -29,7 +29,7 @@
 
 
     <div>
-        <p style="100px" > <input  id="myInput"  type="text" placeholder="search">
+        <p style="" > <input  id="myInput"  type="text" placeholder="search">
 
     </div>
 
