--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -27,7 +27,7 @@
                         <div class="content-center">
                             <div class="cc-profile-image"><a href="#"><img src="{{ asset('assets3/images/anthony.jpg') }}" alt="Image"/></a></div>
                             <div class=" ">{{ app.user.nom }}{{ app.user.prenom }}</div>
-                            <p class="category text-white">{{ app.user.profil }}</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                            <p class="category text-white">{{ app.user.profil }}</p><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                         </div>
                     </div>
 
@@ -117,14 +117,14 @@
                 <div class="row">
                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
-                            <p>March 2016 - Present</p>
-                            <div class="h5">CreativeM</div>
+                            <p>{{ e.dateDebut | date }}</p>
+                            <div class="h5">{{ e.societe }}</div>
                         </div>
                     </div>
                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                            <div class="h5">Front End Developer</div>
-                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                            <div class="h5">{{ e.poste }}</div>
+                            <p></p>
                         </div>
                     </div>
                 </div>
