create page profile users

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -25,9 +25,15 @@
                     <div class="page-header-image" data-parallax="true" style="background-image: {{asset('assets3/images/cc-bg-1.jpg')}}"></div>
                     <div class="container">
                         <div class="content-center">
-                            <div class="cc-profile-image"><a href="#"><img src="{{ asset('assets3/images/anthony.jpg') }}" alt="Image"/></a></div>
+                            <div class="cc-profile-image"><a href="#"><img src="{{ asset('profiles/' ~ app.user.pdp) }}" alt="Image"/></a></div>
                             <div class=" ">{{ app.user.nom }}{{ app.user.prenom }}</div>
-                            <p class="category text-white">{{ app.user.profil }}</p><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                            <p class="category text-white">{{ app.user.profil }}</p>
+                            {% if app.user.cv %}
+                            <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                            <a class="btn btn-primary" href="{{ path('upload_cv') }}" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Upload new CV</a>  <a  class="btn btn-primary" href="{{ path('edit_photo_profil',{'idUser':app.user.id}) }}" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">  Edit Photo</a>
+                            {% else %}
+                            <a class="btn btn-primary" href="{{ path('upload_cv') }}" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Upload new CV</a>  <a  class="btn btn-primary" href="{{ path('edit_photo_profil',{'idUser':app.user.id}) }}" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">  Edit Photo</a>
+                            {% endif %}
                         </div>
                     </div>
 
@@ -40,9 +46,12 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
                             <div class="card-body">
-                                <div class="h4 mt-0 title">About</div>
+                                <div class="h4 mt-0 text-info">About</div>
                                 <p>{{ app.user.infos }}</p>
+                                <div class="h4 mt-0 text-info">Faculte</div>
+                                <p >{{ app.user.idfaculte.nomfaculte }}</p>
                             </div>
+
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="card-body">
@@ -63,6 +72,9 @@
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
                                     <div class="col-sm-8">English, German, French</div>
+                                </div>
+                                <div class="row mt-5" style="text-align: right">
+                                    <a  class="btn btn-secondary" href="{{ path('edit_profile',{'idUser': app.user.id}) }}">Edit Profile</a>
                                 </div>
                             </div>
                         </div>
@@ -113,56 +125,32 @@
     <div class="section" id="experience">
         <div class="container cc-experience">
             <div class="h4 text-center mb-4 title">Work Experience</div>
+            {% for e in experiences  %}
             <div class="card">
                 <div class="row">
                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
-                            <p>{{ e.dateDebut | date }}</p>
+                            <p>{{ e.dateDebut | date("F Y") }} - {{ e.datefin | date("F Y")}}</p>
                             <div class="h5">{{ e.societe }}</div>
                         </div>
                     </div>
                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                             <div class="h5">{{ e.poste }}</div>
-                            <p></p>
+                            <p>{{ e.description }}</p>
+                            <div class="competences mise en ouvre">
+                                <p class="text-info">Competences Mise En Oeuvre :</p>
+                                <p>{{ e.competanMiseEnOuvre}}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                        <div class="card-body cc-experience-header">
-                            <p>April 2014 - March 2016</p>
-                            <div class="h5">WebNote</div>
-                        </div>
-                    </div>
-                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                        <div class="card-body">
-                            <div class="h5">Web Developer</div>
-                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="row">
-                    <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                        <div class="card-body cc-experience-header">
-                            <p>April 2013 - February 2014</p>
-                            <div class="h5">WEBM</div>
-                        </div>
-                    </div>
-                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                        <div class="card-body">
-                            <div class="h5">Intern</div>
-                            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            {% endfor %}
+
     </div>
+    </div>
+
     <script src="{{ asset('assets3/js/core/jquery.3.2.1.min.js?ver=1.1.0') }}"></script>
     <script src="{{ asset('assets3/js/core/popper.min.js?ver=1.1.0') }}"></script>
     <script src="{{ asset('assets3/js/core/bootstrap.min.js?ver=1.1.0') }}"></script>
