essai 1 module abdou

--- a/templates/demandestage/indexetudiant.html.twig
+++ b/templates/demandestage/indexetudiant.html.twig
@@ -21,7 +21,7 @@
                 <td>{{ demandestage.iddemande }}</td>
                 <td>{{ demandestage.etat }}</td>
                 <td> {{ demandestage.idstage}}</td>
-                <td>{{ demandestage.idpersonne }}</td>
+                <td>{{ demandestage.iduser }}</td>
                 <td>
                     <a href="{{ path('app_demandestage_showe', {'iddemande': demandestage.iddemande}) }}">show</a>
                   
