--- a/templates/demandestage/show.html.twig
+++ b/templates/demandestage/show.html.twig
@@ -23,11 +23,11 @@
             </tr>
              <tr>
                 <th>Etudiant</th>
-                <td>{{ demandestage.idpersonne }}</td>
+                <td>{{ demandestage.iduser }}</td>
             </tr>
         </tbody>
     </table>
-        <a class="btn"  href="{{ path('app_demandestage_indexxR', {'idpersonne': "107"}) }}">back to list</a>
+        <a class="btn"  href="{{ path('app_demandestage_indexxR', {'idpersonne': "1"}) }}">back to list</a>
 
     <a class="btn" href="{{ path('app_demandestage_edit', {'iddemande': demandestage.iddemande}) }}">edit</a>
 
