--- a/templates/entretien/_form.html.twig
+++ b/templates/entretien/_form.html.twig
@@ -21,8 +21,8 @@
                                 </div> 	
 								<div class="top-margin">  
 								<label>Etudiant <span class='text-danger'>*</span></label>
-                                {{ form_widget(form.idpersonne,{attr:{'class':'form-control'}}) }} 
-                                {{ form_errors(form.idpersonne,{attr:{'class':'text-danger'}}) }}
+                                {{ form_widget(form.iduser,{attr:{'class':'form-control'}}) }} 
+                                {{ form_errors(form.iduser,{attr:{'class':'text-danger'}}) }}
                                 </div>							
                                 <div class="top-margin">  
                                 <label>Lien <span class='text-danger'>*</span></label>
