--- a/templates/demandestage/showe.html.twig
+++ b/templates/demandestage/showe.html.twig
@@ -23,11 +23,11 @@
             </tr>
              <tr>
                 <th>Etudiant</th>
-                <td>{{ demandestage.idpersonne }}</td>
+                <td>{{ demandestage.iduser }}</td>
             </tr>
         </tbody>
     </table>
-        <a class="btn"  href="{{ path('app_demandestage_indexx', {'idpersonne': "105"}) }}">back to list</a>
+        <a class="btn"  href="{{ path('app_demandestage_indexx', {'idpersonne': "1"}) }}">back to list</a>
 
  
 
