--- a/templates/stage/edit.html.twig
+++ b/templates/stage/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('stage/editForm.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_stage_index') }}">back to list</a>
+    <a href="{{ path('app_stage_mesStage', {'idpersonne': "1"}) }}">back to list</a>
 
     {{ include('stage/_delete_form.html.twig') }}
 {% endblock %}
