--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -233,7 +233,7 @@
 
 
 			<!-- Back to Top -->
-			<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top">
+			<a href="#" class="btn btn-lg btn-info btn-lg-square back-to-top">
 				<i class="bi bi-arrow-up"></i>
 			</a>
 		{% endblock %}
