--- a/templates/entretien/editForm.html.twig
+++ b/templates/entretien/editForm.html.twig
@@ -39,8 +39,8 @@
                                                                     <div class="top-margin">  
 
                                                                         <label>Etudiant <span class='text-danger'>*</span></label>
-                                                                        {{ form_widget(form.idpersonne,{attr:{'class':'form-control'}}) }} 
-                                                                        {{ form_errors(form.idpersonne,{attr:{'class':'text-danger'}}) }}
+                                                                        {{ form_widget(form.iduser,{attr:{'class':'form-control'}}) }} 
+                                                                        {{ form_errors(form.iduser,{attr:{'class':'text-danger'}}) }}
 
                                                                     </div>		                                
                                                                     
@@ -53,7 +53,7 @@
 
                                                                     <div class="top-margin">  
                                                                     
-                                                                        <a href="{{ path('app_entretien_indexxR', {'idpersonne': "107"}) }}">back to list</a>
+                                                                        <a href="{{ path('app_entretien_indexxR', {'idpersonne': "1"}) }}">back to list</a>
 
                                                                     </div>        
                                                                     <hr>
