--- a/templates/entretien/show.html.twig
+++ b/templates/entretien/show.html.twig
@@ -28,12 +28,12 @@
             </tr>
             <tr>
                 <th>Etudiant</th>
-                <td>{{ entretien.idpersonne }}</td>
+                <td>{{ entretien.iduser }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a class="btn" href="{{ path('app_entretien_indexxR', {'idpersonne': "107"}) }}">back to list</a>
+    <a class="btn" href="{{ path('app_entretien_indexxR', {'idpersonne': "1"}) }}">back to list</a>
 
     
 
