--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -8,7 +8,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-				           and uncomment the following Encore helpers to start using Symfony UX #}
+																						           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link href="assets/img/favicon.png" rel="icon">
 			<link
@@ -46,7 +46,7 @@
 
 				<div class="d-flex align-items-center justify-content-between">
 					<a href="index.html" class="logo d-flex align-items-center">
-						<img src="assets/img/logo.png" alt="">
+						<img src="assets/img/logo.png" alt="Monstage">
 						<span class="d-none d-lg-block">MonStage</span>
 					</a>
 					<i class="bi bi-list toggle-sidebar-btn"></i>
@@ -117,137 +117,54 @@
 				<ul class="sidebar-nav" id="sidebar-nav">
 
 					<li class="nav-item">
-						<a class="nav-link " href="index.html">
-							<i class="bi bi-grid"></i>
-							<span>Dashboard</span>
+						<a class="nav-link " href="{{ path('app_stage_indexx') }}">
+							<i class="bi bi-briefcase"></i>
+							<span>Gestion des Stages</span>
 						</a>
 					</li>
-					<!-- End Dashboard Nav -->
 
 					<li class="nav-item">
-						<a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-							<i class="bi bi-menu-button-wide"></i>
-							<span>Components</span>
-							<i class="bi bi-chevron-down ms-auto"></i>
+						<a class="nav-link " href="{{ path('app_formation') }}">
+							<i class="bi bi-grid"></i>
+							<span>Gestion des Entretiens</span>
 						</a>
-						<ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-							<li>
-								<a href="components-alerts.html">
-									<i class="bi bi-circle"></i>
-									<span>Alerts</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-accordion.html">
-									<i class="bi bi-circle"></i>
-									<span>Accordion</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-badges.html">
-									<i class="bi bi-circle"></i>
-									<span>Badges</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-breadcrumbs.html">
-									<i class="bi bi-circle"></i>
-									<span>Breadcrumbs</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-buttons.html">
-									<i class="bi bi-circle"></i>
-									<span>Buttons</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-cards.html">
-									<i class="bi bi-circle"></i>
-									<span>Cards</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-carousel.html">
-									<i class="bi bi-circle"></i>
-									<span>Carousel</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-list-group.html">
-									<i class="bi bi-circle"></i>
-									<span>List group</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-modal.html">
-									<i class="bi bi-circle"></i>
-									<span>Modal</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-tabs.html">
-									<i class="bi bi-circle"></i>
-									<span>Tabs</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-pagination.html">
-									<i class="bi bi-circle"></i>
-									<span>Pagination</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-progress.html">
-									<i class="bi bi-circle"></i>
-									<span>Progress</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-spinners.html">
-									<i class="bi bi-circle"></i>
-									<span>Spinners</span>
-								</a>
-							</li>
-							<li>
-								<a href="components-tooltips.html">
-									<i class="bi bi-circle"></i>
-									<span>Tooltips</span>
-								</a>
-							</li>
-						</ul>
 					</li>
-					<!-- End Components Nav -->
+
+
+					<li class="nav-item">
+						<a class="nav-link " href="{{ path('app_formation') }}">
+							<i class="bi bi-easel2"></i>
+							<span>Gestion de Formations</span>
+						</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link " href="{{ path('app_reservation') }}">
+							<i class="bi bi-calendar-check"></i>
+							<span>Gestion des Reservations</span>
+						</a>
+					</li>
+
+					<!-- End Dashboard Nav -->
+
 
 					<li class="nav-item">
 						<a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-							<i class="bi bi-journal-text"></i>
-							<span>Forms</span>
+							<i class="bi bi-building"></i>
+							<span>Gestion des Bibliothèques</span>
 							<i class="bi bi-chevron-down ms-auto"></i>
 						</a>
 						<ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 							<li>
-								<a href="forms-elements.html">
+								<a href="{{path('addBibliotheque')}}">
 									<i class="bi bi-circle"></i>
-									<span>Form Elements</span>
+									<span>Ajouter Bibliothèque</span>
 								</a>
 							</li>
 							<li>
-								<a href="forms-layouts.html">
+								<a href={{path('app_bibliotheque')}}>
 									<i class="bi bi-circle"></i>
-									<span>Form Layouts</span>
-								</a>
-							</li>
-							<li>
-								<a href="forms-editors.html">
-									<i class="bi bi-circle"></i>
-									<span>Form Editors</span>
-								</a>
-							</li>
-							<li>
-								<a href="forms-validation.html">
-									<i class="bi bi-circle"></i>
-									<span>Form Validation</span>
+									<span>Liste Bibliothèque</span>
 								</a>
 							</li>
 						</ul>
@@ -255,200 +172,108 @@
 					<!-- End Forms Nav -->
 
 					<li class="nav-item">
-						<a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-							<i class="bi bi-layout-text-window-reverse"></i>
-							<span>Tables</span>
-							<i class="bi bi-chevron-down ms-auto"></i>
-						</a>
-						<ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-							<li>
-								<a href="tables-general.html">
-									<i class="bi bi-circle"></i>
-									<span>General Tables</span>
-								</a>
-							</li>
-							<li>
-								<a href="tables-data.html">
-									<i class="bi bi-circle"></i>
-									<span>Data Tables</span>
-								</a>
-							</li>
-						</ul>
-					</li>
-					<!-- End Tables Nav -->
-
-					<li class="nav-item">
 						<a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-							<i class="bi bi-bar-chart"></i>
-							<span>Charts</span>
+							<i class="bi bi-book"></i>
+							<span>Gestion des Livres</span>
 							<i class="bi bi-chevron-down ms-auto"></i>
 						</a>
 						<ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 							<li>
-								<a href="charts-chartjs.html">
+								<a href={{path('addLivre')}}>
 									<i class="bi bi-circle"></i>
-									<span>Chart.js</span>
+									<span>Ajouter Livre</span>
 								</a>
 							</li>
 							<li>
-								<a href="charts-apexcharts.html">
+								<a href={{path('app_livre')}}>
 									<i class="bi bi-circle"></i>
-									<span>ApexCharts</span>
+									<span>Liste livres</span>
 								</a>
 							</li>
-							<li>
-								<a href="charts-echarts.html">
-									<i class="bi bi-circle"></i>
-									<span>ECharts</span>
-								</a>
-							</li>
+
 						</ul>
 					</li>
 					<!-- End Charts Nav -->
 
+
 					<li class="nav-item">
-						<a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-							<i class="bi bi-gem"></i>
-							<span>Icons</span>
+						<a class="nav-link " href="{{ path('app_quiz_index') }}">
+							<i class="bi bi-grid"></i>
+							<span>Gestion des Quiz</span>
+						</a>
+					</li>
+
+
+					<li class="nav-item">
+						<a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+							<i class="bi bi-menu-button-wide"></i>
+							<span>Gestion des Questions</span>
 							<i class="bi bi-chevron-down ms-auto"></i>
 						</a>
-						<ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+						<ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
 							<li>
-								<a href="icons-bootstrap.html">
+								<a href="{{ path('ajouterQuestion') }}">
 									<i class="bi bi-circle"></i>
-									<span>Bootstrap Icons</span>
+									<span>Ajouter Question</span>
 								</a>
 							</li>
 							<li>
-								<a href="icons-remix.html">
+								<a href="{{ path('afficherQuestions') }}">
 									<i class="bi bi-circle"></i>
-									<span>Remix Icons</span>
-								</a>
-							</li>
-							<li>
-								<a href="icons-boxicons.html">
-									<i class="bi bi-circle"></i>
-									<span>Boxicons</span>
+									<span>List Questions</span>
 								</a>
 							</li>
 						</ul>
 					</li>
-					<!-- End Icons Nav -->
+					<!-- End Components Nav -->
 
-					<li class="nav-heading">Pages</li>
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="users-profile.html">
-							<i class="bi bi-person"></i>
-							<span>Profile</span>
+					<li class="nav-item btn btn-danger">
+						<a class="nav-link " href="{{ path('app_logout') }}">
+							<i class="bi bi-box-arrow-left"></i>
+							<span>Log out</span>
 						</a>
 					</li>
-					<!-- End Profile Page Nav -->
 
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-faq.html">
-							<i class="bi bi-question-circle"></i>
-							<span>F.A.Q</span>
-						</a>
-					</li>
-					<!-- End F.A.Q Page Nav -->
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-contact.html">
-							<i class="bi bi-envelope"></i>
-							<span>Contact</span>
-						</a>
-					</li>
-					<!-- End Contact Page Nav -->
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-register.html">
-							<i class="bi bi-card-list"></i>
-							<span>Register</span>
-						</a>
-					</li>
-					<!-- End Register Page Nav -->
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-login.html">
-							<i class="bi bi-box-arrow-in-right"></i>
-							<span>Login</span>
-						</a>
-					</li>
-					<!-- End Login Page Nav -->
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-error-404.html">
-							<i class="bi bi-dash-circle"></i>
-							<span>Error 404</span>
-						</a>
-					</li>
-					<!-- End Error 404 Page Nav -->
-
-					<li class="nav-item">
-						<a class="nav-link collapsed" href="pages-blank.html">
-							<i class="bi bi-file-earmark"></i>
-							<span>Blank</span>
-						</a>
-					</li>
-					<!-- End Blank Page Nav -->
 
 				</ul>
+			</li>
+		</body>
+	</html>
+</aside>
+<!-- End Sidebar-->{% endblock %}{% block body %}{% endblock %}{% block footer %}
 
-			</aside>
-			<!-- End Sidebar-->
+<footer id="footer" class="footer">
+	<div class="copyright">
+		&copy; Copyright
+		<strong>
+			<span>MonStage</span>
+		</strong>. All Rights Reserved
+	</div>
+	<div class="credits">
+		<!-- All the links in the footer should remain intact. -->
+		<!-- You can delete the links only if you purchased the pro version. -->
+		<!-- Licensing information: https://bootstrapmade.com/license/ -->
+		<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+		Designed by
+			<a href="https://theone.com/"> TheOne</a>
+	</div>
+</footer>
+<!-- End Footer -->
+<!-- Flashy depends on jQuery -->
+<script src="//code.jquery.com/jquery.js"></script>
+<!-- Load Flashy default JavaScript -->
+<script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
 
+<!-- Template Javascript -->
+<script src="{{ asset('assets2/js/main.js') }}"></script>{% endblock %}{{ include('@MercurySeriesFlashy/flashy.html.twig') }}{% block javascripts %}
+<script src="{{ asset('assets1/vendor/apexcharts/apexcharts.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/chart.js/chart.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/echarts/echarts.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/quill/quill.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/simple-datatables/simple-datatables.js')}}"></script>
+<script src="{{ asset('assets1/vendor/tinymce/tinymce.min.js')}}"></script>
+<script src="{{ asset('assets1/vendor/php-email-form/validate.js')}}"></script>
 
-		{% endblock %}
-
-
-		{% block body %}{% endblock %}
-
-		{% block footer %}
-
-			<footer id="footer" class="footer">
-				<div class="copyright">
-					&copy; Copyright
-					<strong>
-						<span>MonStage</span>
-					</strong>. All Rights Reserved
-				</div>
-				<div class="credits">
-					<!-- All the links in the footer should remain intact. -->
-					<!-- You can delete the links only if you purchased the pro version. -->
-					<!-- Licensing information: https://bootstrapmade.com/license/ -->
-					<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->Designed by
-						<a href="https://theone.com/"> TheOne</a>
-				</div>
-			</footer>
-			<!-- End Footer -->
-			<!-- Flashy depends on jQuery -->
-			<script src="//code.jquery.com/jquery.js"></script>
-			<!-- Load Flashy default JavaScript -->
-			<script src="{{ asset('bundles/mercuryseriesflashy/js/flashy.js') }}"></script>
-
-			<!-- Template Javascript -->
-			<script src="{{ asset('assets2/js/main.js') }}"></script>
-		{% endblock %}
-		{{ include('@MercurySeriesFlashy/flashy.html.twig') }}
-
-			{% block javascripts %}
-			<script src="{{ asset('assets1/vendor/apexcharts/apexcharts.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/chart.js/chart.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/echarts/echarts.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/quill/quill.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/simple-datatables/simple-datatables.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/tinymce/tinymce.min.js')}}"></script>
-			<script src="{{ asset('assets1/vendor/php-email-form/validate.js')}}"></script>
-
-			<!-- Template Main JS File -->
-			<script src="{{ asset('assets1/js/main.js')}}"></script>
-
-		{% endblock %}
-    
-    </body>
-
-
-
-</html>
+<!-- Template Main JS File -->
+<script src="{{ asset('assets1/js/main.js')}}"></script>{% endblock %}</body></body></html>
