--- a/templates/reservation/newreservation.html.twig
+++ b/templates/reservation/newreservation.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseAdmin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}{% endblock %}
 
@@ -35,7 +35,7 @@
 
                     {{ form_end(f) }}
 
-                    <a href="{{ 'reservation' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des reservations</a>
+                    <a href="{{ 'reservationFormateur' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des reservations</a>
                 </div>
             </div>
         </div>
