--- a/templates/formation/editformation.html.twig
+++ b/templates/formation/editformation.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseAdmin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 
 {% block title %}Modifier Formation{% endblock %}
@@ -71,7 +71,7 @@
 
                     {{ form_end(ff) }}
 
-                    <a href="{{ 'formation' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des formations</a>
+                    <a href="{{ 'ListFormationFormateur' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des formations</a>
                 </div>
             </div>
         </div>
