--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,9 @@
 			<!-- Navbar Start -->
 			<nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
 				<a href="{{path('acceuil')}}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-
+					<h2 class="m-0 text-primary">
+						<i class="fa fa-diamond me-3"></i>MonStage</h2>
+					</h2>
 				</a>
 
 				<div class="collapse navbar-collapse" id="navbarCollapse">
