--- a/templates/bibliotheque/index.html.twig
+++ b/templates/bibliotheque/index.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Hello BibliothequeController!{% endblock %}
 
 {% block body %}
-<center>
+
+    <main id="main" class="main">
 
             <div class="card-body">
                 <h5 class="card-title">Bibliotheques</h5>
@@ -27,7 +28,7 @@
 
             </div>
 
- </center>
+ </main>
 
 
 
