--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -8,7 +8,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																						           and uncomment the following Encore helpers to start using Symfony UX #}
+																								           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link href="assets/img/favicon.png" rel="icon">
 			<link
@@ -115,6 +115,13 @@
 			<aside id="sidebar" class="sidebar">
 
 				<ul class="sidebar-nav" id="sidebar-nav">
+
+					<li class="nav-item">
+						<a class="nav-link " href="{{ path('app_admin_users') }}">
+							<i class="bi bi-people"></i>
+							<span>Gestion des Utilisateurs</span>
+						</a>
+					</li>
 
 					<li class="nav-item">
 						<a class="nav-link " href="{{ path('app_stage_indexx') }}">
