--- a/templates/question/index.html.twig
+++ b/templates/question/index.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block body %}
-<div style="display: flex;align-items: center;justify-content: center;padding:150px">
+    <main id="main" class="main">
+
    <div>
        <h1 class="card-title">Liste des Questions</h1>
         <div style="display: flex;align-items: right;justify-content: right;">       
@@ -42,8 +43,8 @@
 
 
     </div>
-			 <div class="d-flex justify-content-center">
+			 <main class="d-flex justify-content-center">
 		 {% do questions.setPageRange(2) %}
 		 {{ knp_pagination_render (questions ,'pagination.html.twig') }}
-		 </div>
+		 </main>
 {% endblock %}
