--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -124,14 +124,14 @@
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link " href="{{ path('app_stage_indexx') }}">
+						<a class="nav-link " href="{{ path('app_stage_admin') }}">
 							<i class="bi bi-briefcase"></i>
 							<span>Gestion des Stages</span>
 						</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link " href="{{ path('app_formation') }}">
+						<a class="nav-link " href="{{ path('app_entretien_index') }}">
 							<i class="bi bi-grid"></i>
 							<span>Gestion des Entretiens</span>
 						</a>
