--- a/templates/entretien/entretienAdmin.html.twig
+++ b/templates/entretien/entretienAdmin.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Entretiens {% endblock %}
 
 {% block body %}
+    <main id="main" class="main">
+
     <h1 style="padding:80px">Entretiens</h1>
 
     <table class="table">
@@ -33,6 +35,7 @@
         {% endfor %}
         </tbody>
     </table>
+    </main>
 
     
 {% endblock %}
