--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -124,7 +124,7 @@
 								<div class="nav-item dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Mes Formations</a>
 									<div class="dropdown-menu fade-down m-0">
-										<a href="{{path('app_formation_etudiant')}}" class="dropdown-item">Liste des formations</a>
+										<a href="{{path('ListFormationEtudiant')}}" class="dropdown-item">Liste des formations</a>
 										<a href="{{path('app_reservation_Etudiant')}}" class="dropdown-item">Mes reservations</a>
 									</div>
 								</div>
