fix navigation formation

--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -139,14 +139,14 @@
 
 
 					<li class="nav-item">
-						<a class="nav-link " href="{{ path('app_formation') }}">
+						<a class="nav-link " href="{{ path('ListFormationAdmin') }}">
 							<i class="bi bi-easel2"></i>
 							<span>Gestion de Formations</span>
 						</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link " href="{{ path('app_reservation') }}">
+						<a class="nav-link " href="{{ path('app_reservation_Admin') }}">
 							<i class="bi bi-calendar-check"></i>
 							<span>Gestion des Reservations</span>
 						</a>
