--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -131,7 +131,7 @@
 								<a href="{{ path('app_quiz_new') }}" class="nav-item nav-link">Quiz</a>
 								<a href="{{path('app_bibliothequeClient')}}" class="nav-item nav-link">Bibliothèque</a>
 							{% elseif app.user.role == "Formateur" %}
-								<a href="{{path('app_formation_etudiant')}}" class="nav-item nav-link ">Liste des formations</a>
+								<a href="{{path('ListFormationEtudiant')}}" class="nav-item nav-link ">Liste des formations</a>
 								<a href="{{path('app_reservation_Etudiant')}}" class="nav-item nav-link ">Mes reservations</a>
 							{% else %}
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Mes Stages</a>
