--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -49,7 +49,7 @@
                             <div class="card-body">
                                 <div class="h4 mt-0 text-info">About</div>
                                 <p>{{ app.user.infos }}</p>
-                                {% if app.user.role == "Etudiant" %}
+                                {% if app.user.role == "Etudiant" and app.user.idfaculte%}
                                 <div class="h4 mt-0 text-info">Faculte</div>
 
                                 <p >{{ app.user.idfaculte.nomfaculte }}</p>
