--- a/templates/quiz/_form.html.twig
+++ b/templates/quiz/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-outline-success">{{ button_label|default('Commencer') }}</button>
+<h4>{{ form_widget(form) }} </h4>
+<a class="btn btn-outline-danger" href="{{ path('acceuil') }}">Retour à l'acceuil</a>
+
+<button class="btn btn-outline-success">{{ button_label|default('Commencer') }}</button>
+
 {{ form_end(form) }}
