--- a/templates/formation/ListFormationAdmin.html.twig
+++ b/templates/formation/ListFormationAdmin.html.twig
@@ -24,17 +24,13 @@
         </form>
         </form>
     </div>
-    <!-- Jobs Container / End -->
 
-
-
+{#Hedhy recherche dynamique #}
     <div>
         <p style="100px" > <input  id="myInput"  type="text" placeholder="search">
-
     </div>
 
     <div class="example-wrapper">
-
 
         {% for message in app.flashes('success')%}
             <div class="alert alert-success">
