--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -88,8 +88,77 @@
 
         <a href="{{ path('DownloadProduitsDataFormation') }}" class="btn btn-dark waves-effect waves-light">Download PDF</a>
 
+<br>
+
+{#        <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">#}
+{#            <div class="row">#}
+
+{#                <div class="col-lg-6 col-md-12">#}
+{#                    <div class="card-body">#}
+
+{#                        <div class="row mt-3">#}
+{#                            <div class="col-sm-4"><strong class="text-uppercase" _msthash="1627873" _msttexthash="586404">Description:</strong></div>#}
+{#                            <div class="col-sm-8" _msthash="1628016" _msttexthash="538421">lehne naayet leel description</div>#}
+{#                        </div>#}
+{#                        <div class="row mt-3">#}
+{#                            <div class="col-sm-4"><strong class="text-uppercase" _msthash="1628094" _msttexthash="177580">Type:</strong></div>#}
+{#                            <div class="col-sm-8" _msthash="1628237" _msttexthash="57538">type</div>#}
+{#                        </div>#}
+{#                        <div class="row mt-3">#}
+{#                            <div class="col-sm-4"><strong class="text-uppercase" _msthash="1628315" _msttexthash="30355">Domaine:</strong></div>#}
+{#                            <div class="col-sm-8" _msthash="1628458" _msttexthash="58032">Domaine</div>#}
+{#                        </div>                        <div class="row mt-3">#}
+{#                            <div class="col-sm-4"><strong class="text-uppercase" _msthash="1628315" _msttexthash="30355">Duree:</strong></div>#}
+{#                            <div class="col-sm-8" _msthash="1628458" _msttexthash="58032">Duree</div>#}
+{#                        </div>#}
+
+{#                        <div class="row mt-5" style="text-align: right">#}
+{#                            <a class="btn btn-success" href="/newreservation" _msthash="1504802" _msttexthash="319670">Modifier le profil</a>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+
+{# e exp twali formation f#}
+{#        ####### hedhy zedtha #}
+{#        <div class="section" id="experience">#}
+{#            <div class="container cc-experience">#}
+{#                <div class="h4 text-center mb-4 title">Formations disponible</div>#}
+{#                {% for formation in f %}#}
 
 
+
+{#                    <div class="card">#}
+{#                        <div class="row">#}
+{#                            <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">#}
+{#                                <div class="card-body cc-experience-header">#}
+{#<img src="/public/assets/images/formation.png">#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">#}
+{#                                <div class="card-body">#}
+{#                                    <div class="h5">#}
+{#                                        <h4>Description : {{ formation.description }}<br>#}
+{#                                        Titre : {{ formation.titre }}<br>#}
+{#                                        Type : {{ formation.type }}<br>#}
+{#                                        Domaine : {{ formation.domaine }}#}
+{#                                        <div class="row mt-5" style="text-align: right">#}
+{#                                            <a class="btn btn-success" href="{{ path('newreservation', {'idFormation': formation.idFormation}) }} _msthash="1504802" _msttexthash="319670">Réserver</a>#}
+{#                                        </div>#}
+{#                                        <div class="row mt-5" style="text-align: right">#}
+{#                                            <a class="btn btn-danger" href="{{ path('deleteformation', {'idFormation': formation.idFormation}) }}" _msthash="1504802" _msttexthash="319670">Supprimer</a>#}
+{#                                        </div>#}
+
+{#                                    </div>#}
+
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                {% endfor %}#}
+
+{#<br>#}
         <tbody id="search">
 
         </tbody>
