--- a/templates/entretien/indexetudiant.html.twig
+++ b/templates/entretien/indexetudiant.html.twig
@@ -25,7 +25,7 @@
                 <td>{{ entretien.iduser }}</td>
                 <td>{{ entretien.lienentretien }}</td>
                 <td>
-                    <a href="{{ path('app_entretien_show_etudiant', {'identretien': entretien.identretien}) }}">show</a>
+                    <a class="btn btn-outline-info" href="{{ path('app_entretien_show_etudiant', {'identretien': entretien.identretien}) }}">show</a>
                     
                 </td>
             </tr>
