--- a/templates/entretien/showetudiant.html.twig
+++ b/templates/entretien/showetudiant.html.twig
@@ -33,7 +33,7 @@
         </tbody>
     </table>
 
-    <a class="btn" href="{{ path('app_entretien_indexx', {'idpersonne': "1"}) }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_entretien_indexx', {'idpersonne': app.user.id}) }}">back to list</a>
 
    
 </div>
