--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         {% endfor %}
-                        <a class="btn btn-success w-50 m-auto" href="{{ path('add_competance') }}">Ajouter Nouvelle Competance</a>
+                        <a class="btn btn-info w-50 m-auto" href="{{ path('add_competance') }}">Ajouter Nouvelle Competance</a>
 
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             {% endfor %}
-            <a class="btn btn-success  w-100 p-3  " href="{{ path('add_experience') }}">Ajouter nouvelle experience</a>
+            <a class="btn btn-info  w-100 p-3  " href="{{ path('add_experience') }}">Ajouter nouvelle experience</a>
     </div>
     </div>
 
