--- a/templates/demandestage/indexetudiant.html.twig
+++ b/templates/demandestage/indexetudiant.html.twig
@@ -23,7 +23,7 @@
                 <td> {{ demandestage.idstage}}</td>
                 <td>{{ demandestage.iduser }}</td>
                 <td>
-                    <a href="{{ path('app_demandestage_showe', {'iddemande': demandestage.iddemande}) }}">show</a>
+                    <a class="btn btn-outline-info" href="{{ path('app_demandestage_showe', {'iddemande': demandestage.iddemande}) }}">show</a>
                   
                 </td>
             </tr>
