--- a/templates/demandestage/show.html.twig
+++ b/templates/demandestage/show.html.twig
@@ -24,9 +24,9 @@
             </tr>
         </tbody>
     </table>
-        <a class="btn"  href="{{ path('app_demandestage_indexxR', {'idpersonne': "1"}) }}">back to list</a>
+        <a class="btn btn-outline-primary"  href="{{ path('app_demandestage_indexxR', {'idpersonne': app.user.id}) }}">back to list</a>
 
-    <a class="btn" href="{{ path('app_demandestage_edit', {'iddemande': demandestage.iddemande}) }}">edit</a>
+    <a class="btn btn-outline-info" href="{{ path('app_demandestage_edit', {'iddemande': demandestage.iddemande}) }}">edit</a>
 
     {{ include('demandestage/_delete_form.html.twig') }}
     </div>
