--- a/templates/formation/ListFormationEtudiant.html.twig
+++ b/templates/formation/ListFormationEtudiant.html.twig
@@ -5,26 +5,6 @@
 {% block body %}
 
 
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="example-wrapper">
-
-    <!-- Jobs Container -->
-    <div class="row">
-
-        </form>
-
-        {# for filter buttons #}
-        </form>
-        </form>
-    </div>
-    <!-- Jobs Container / End -->
 
 
 
@@ -73,9 +53,10 @@
 
 
 
-        <div class="pagination">
-            {{ knp_pagination_render(f) }}
-        </div>
+	<main class="d-flex justify-content-center">
+		{% do f.setPageRange(2) %}
+		{{ knp_pagination_render (f ,'pagination.html.twig') }}
+	</main>
 
 
 
